# microsservice_telemetry_toolkit

./: GUIA_RAPIDO.md  README.md  docker-compose.yml  example_usage.py  main.py  otel-collector-config.yaml  pyproject.toml
microsservice_telemetry_toolkit/: __init__.py
microsservice_telemetry_toolkit/application/: __init__.py
microsservice_telemetry_toolkit/application/services/: __init__.py  http_auth_header_mapper.py  span_name_validator.py
microsservice_telemetry_toolkit/domain/: __init__.py
microsservice_telemetry_toolkit/domain/port/: chain_handler.py  generic_counter.py  generic_gauge.py  generic_histogram.py  generic_logger.py  generic_span.py  generic_tracer.py  generic_up_down_counter.py  text_encoder.py
microsservice_telemetry_toolkit/domain/value_object/: app_log.py
microsservice_telemetry_toolkit/infrastructure/: __init__.py  base64_text_encoder.py  otel_app_tracer.py  otel_counter.py  otel_gauge.py  otel_histogram.py  otel_logger.py  otel_span.py  otel_tracer.py  otel_up_down_counter.py
