[project]
name = "microsservice-telemetry-toolkit"
version = "0.1.0"
description = "A library for telemetry (tracing) in Python microservices using OpenTelemetry"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Guilherme Somenzi", email = "guilherme@somenzi.dev" }]
license = { text = "MIT" }
keywords = [
    "opentelemetry",
    "telemetry",
    "tracing",
    "observability",
    "microservices",
    "monitoring",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
]

[project.urls]
Homepage = "https://github.com/gsomenzi/microsservice_telemetry_toolkit"
Repository = "https://github.com/gsomenzi/microsservice_telemetry_toolkit"
Issues = "https://github.com/gsomenzi/microsservice_telemetry_toolkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
